--- a/APITaxi/static/demo/map.html
+++ b/APITaxi/static/demo/map.html
@@ -22,6 +22,7 @@
 <div id='map'></div>
 
 <script>
+var defaultStep = 100;//ms
 var layer = new L.StamenTileLayer("toner");
 var map = new L.Map("map", {
     center: new L.LatLng(48.85, 2.34),
@@ -66,8 +67,17 @@ function updateMarkers(markers) {
                     map.removeLayer(m['marker']);
                 }
                 var line = makeLine(m['prev'], taxi);
+                var deltaTime = taxi['last_update'] - m['prev']['last_update'];
+                var nbSteps = deltaTime / (defaultStep/1000);
+                var a = new L.LatLng(m['prev']['position']['lat'],
+                            m['prev']['position']['lon']),
+                    b = new L.LatLng(taxi['position']['lat'],
+                            taxi['position']['lon']);
+
                 m.marker = L.AnimatedMarker(line.getLatLngs(), {
-                    icon: defaultIcon
+                    icon: defaultIcon,
+                    distance: Math.floor(a.distanceTo(b)/nbSteps),
+                    interval: defaultStep
                 });
                 map.addLayer(m.marker);
                 m['prev'] = usefullInfo(taxi);
