--- a/APITaxi/static/demo/map.html
+++ b/APITaxi/static/demo/map.html
@@ -4,14 +4,8 @@
 <meta charset=utf-8 />
 <title>Marker movement</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="../static/css/leaflet.awesome-markers.css">
 <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
-<script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-<script src="../static/js/leaflet.awesome-markers.js"></script>
-<script src="../static/js/AnimatedMarker.js"></script>
-<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 <style>
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -20,6 +14,10 @@
 <body>
 
 <div id='map'></div>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script type="text/javascript" src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+<script type="text/javascript" src="../static/js/AnimatedMarker.js"></script>
+<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.3.0"></script>
 
 <script>
 var defaultStep = 100;//ms
@@ -29,8 +27,6 @@ var map = new L.Map("map", {
     zoom: 13
 });
 map.addLayer(layer);
-var defaultIcon = L.AwesomeMarkers.icon({icon: 'taxi',
-    prefix:'ta', markerColor: 'blue'});
 
 function usefullInfo(taxi) {
     return {
@@ -44,7 +40,7 @@ function getPositionTuple(taxi) {
 }
 
 function makeLine(t1, t2) {
-    return L.polyline([getPositionTuple(t1), getPositionTuple(t2)]);
+    return L.polyline([getPositionTuple(t1), getPositionTuple(t1), getPositionTuple(t2)]);
 }
 
 function updateMarkers(markers) {
@@ -62,27 +58,30 @@ function updateMarkers(markers) {
                 };
             }
             var m = markers[taxi['id']];
-            if (m['prev']['last_update'] != taxi['last_update']) {
-                if (m['marker']) {
-                    map.removeLayer(m['marker']);
-                }
-                var line = makeLine(m['prev'], taxi);
-                var deltaTime = taxi['last_update'] - m['prev']['last_update'];
-                var nbSteps = deltaTime / (defaultStep/1000);
+            if (m['prev']['last_update'] < taxi['last_update']) {
                 var a = new L.LatLng(m['prev']['position']['lat'],
                             m['prev']['position']['lon']),
                     b = new L.LatLng(taxi['position']['lat'],
                             taxi['position']['lon']);
+		if (a.lat != b.lat || a.lon != b.lon) {
+			if (m['marker']) {
+			    map.removeLayer(m['marker']);
+			}
+			var deltaTime = taxi['last_update'] - m['prev']['last_update'];
+			var nbSteps = deltaTime / (defaultStep/1000);
+	                var line = makeLine(m['prev'], taxi);
+	                m.marker = L.animatedMarker(line.getLatLngs(), {
+	                      autoStart: true,
+		              distance: Math.ceil(a.distanceTo(b) / nbSteps),
+                              interval: defaultStep 
+	                    });
 
-                m.marker = new L.AnimatedMarker(line.getLatLngs(), {
-                    icon: defaultIcon,
-                    distance: Math.floor(a.distanceTo(b)/nbSteps),
-                    interval: defaultStep
-                });
-                map.addLayer(m.marker);
-                m['prev'] = usefullInfo(taxi);
+	                map.addLayer(m['marker']);
+			m['prev'] = usefullInfo(taxi);
+		}
             }
             taxi_ids.push(taxi['id']);
+
         });
         to_delete = new Array();
         for (var k in markers) {
